# split-happens-app-2

./: .gitignore  README.md  package-lock.json  package.json
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  README_STORAGE.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  storage.rs
src-tauri/src/storage/: dynamodb_dao.rs  memory_dao.rs  mod.rs  sheets_dao.rs
src/components/: BalanceCard.tsx  BalanceTicker.tsx  BowlingPinSelector.tsx  LoadingSpinner.tsx  Modal.tsx  Settings.tsx  SplitForm.tsx  ThemeSwitcher.tsx  TransactionList.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useTauri.ts
src/themes/: AmberTheme.css  GreenTheme.css  NeonTheme.css  RedTheme.css
src/types/: index.ts
