[package]
name = "split-happens"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "split_happens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
aws-config = "1.1.7"
# aws-lc-rs = { version = "1.0.0-rc1", features = ["bindgen"] }
aws-lc-sys = { version = "0.30.0", features = ["bindgen"] }
aws-sdk-dynamodb = "1.17.0"
bytes = "1.10.1"
chrono = "0.4.40"
http-body-util = "0.1.3"
aws-smithy-runtime = { version = "1.0", features = ["client"] }
aws-smithy-http = "0.60"
hyper = "0.14"
hyper-rustls = { version = "0.24", features = [
    "http1",
    "http2",
    "webpki-roots",
] }
# google-sheets4 = "*"
log = "0.4"
rustls = "0.23.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-log = "2"
tauri-plugin-store = "2"

[features]
macos = []
ios = []
android = []
